# container-secure-compose

./: .gitignore  .release-notes.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
building_blocks/networks/: app-external.yaml  app-internal.yaml  layer2.yaml
building_blocks/services/: add-cap-net-admin.yaml  add-cap-net-raw.yaml  drop-capabilities.yaml  drop-privileges.yaml  host-network.yaml  init.yaml  layer2-network.yaml  mirroring-setup.yaml  no-new-privileges.yaml  non-root.yaml  privileged.yaml  read-only.yaml  root.yaml  sidecar.yaml  standard.yaml  wait-init.yaml
building_blocks/volumes/: data.yaml
csc/: __init__.py  cli.py  generator.py  models.py  reporter.py
docs/: README.md
docs/explanation/: security-model.md
docs/how-to-guides/: how-to-add-custom-block.md  how-to-audit-existing-compose.md
docs/reference/: building-blocks-reference.md  cli-reference.md
docs/tutorials/: getting-started.md
examples/ping-tracker/: app_config.yaml  docker-compose.yml
templates/: init-workload-mirroring.yaml  init-workload-ui.yaml  sidecar-workload.yaml
tests/: TODO.md  conftest.py  test_cli.py  test_generator.py  test_merge.py  test_reporter.py
